--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
+        "laravel-echo": "^1.17.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.47",
+        "pusher-js": "^8.4.0-rc2",
         "tailwindcss": "^3.4.13",
         "vite": "^6.0"
     },
@@ -29,6 +31,7 @@
         "tailwindcss-animate": "^1.0.7",
         "vee-validate": "^4.14.7",
         "vue": "^3.5.13",
+        "vue-sonner": "^1.3.0",
         "ziggy-js": "^2.4.1",
         "zod": "^3.24.1"
     }
