--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -12,7 +12,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: php-actions/composer@v6
         with:
-          php_extensions: intl zip exif sodium bcmath
+          php_extensions: intl zip sodium pcntl bcmath
+          php_version: "8.2"
+          args: --ignore-platform-reqs --optimize-autoloader --no-progress --prefer-dist --optimize-autoloader
       - uses: php-actions/phpstan@v3
         with:
           memory_limit: 2G
