download files from url

--- a/.env.example
+++ b/.env.example
@@ -71,3 +71,5 @@ FFPROBE_BINARIES=/usr/bin/ffprobe
 REVERB_APP_ID=my-app-id
 REVERB_APP_KEY=my-app-key
 REVERB_APP_SECRET=my-app-secret
+
+YT_DLP_PATH=
