--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -1,4 +1,4 @@
-name: "Run PHPStan"
+name: 'Run PHPStan'
 
 on:
   push:
@@ -15,7 +15,7 @@ jobs:
       - uses: php-actions/composer@v6
         with:
           php_extensions: intl zip sodium pcntl bcmath
-          php_version: "8.2"
+          php_version: '8.2'
           args: --ignore-platform-reqs --optimize-autoloader --no-progress --prefer-dist --optimize-autoloader
       - uses: php-actions/phpstan@v3
         with:
