--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,10 +1,10 @@
 version: 2
 updates:
-  - package-ecosystem: "npm"
-    directory: "/"
+  - package-ecosystem: 'npm'
+    directory: '/'
     schedule:
-      interval: "daily"
-  - package-ecosystem: "composer"
-    directory: "/"
+      interval: 'daily'
+  - package-ecosystem: 'composer'
+    directory: '/'
     schedule:
-      interval: "daily"
+      interval: 'daily'
