--- a/.github/workflows/code-styling.yml
+++ b/.github/workflows/code-styling.yml
@@ -1,4 +1,4 @@
-name: "Code Styling"
+name: 'Code Styling'
 
 on:
   push:
@@ -29,7 +29,7 @@ jobs:
         uses: php-actions/composer@v6
         with:
           php_extensions: intl zip sodium pcntl bcmath
-          php_version: "8.2"
+          php_version: '8.2'
           args: --ignore-platform-reqs --optimize-autoloader --no-progress --prefer-dist --optimize-autoloader
 
       - name: Setup Node
