--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -6,7 +6,5 @@
   "bracketSpacing": true,
   "bracketSameLine": true,
   "trailingComma": "es5",
-  "plugins": [
-    "prettier-plugin-tailwindcss"
-  ]
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
