--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "inertiajs/inertia-laravel": "^2.0",
     "laravel/framework": "^11.31",
     "laravel/horizon": "^5.30",
+    "laravel/pulse": "^1.3",
     "laravel/reverb": "^1.0",
     "laravel/tinker": "^2.9",
     "norkunas/youtube-dl-php": "^2.9",
