Add laravel sail for easier local development

--- a/.env.example
+++ b/.env.example
@@ -65,11 +65,14 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
-FFMPEG_BINARIES=/usr/bin/ffmpeg
-FFPROBE_BINARIES=/usr/bin/ffprobe
-
 REVERB_APP_ID=my-app-id
 REVERB_APP_KEY=my-app-key
 REVERB_APP_SECRET=my-app-secret
+REVERB_HOST="localhost"
+REVERB_PORT=8080
+REVERB_SCHEME=http
 
-YT_DLP_PATH=
+VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
+VITE_REVERB_HOST="${REVERB_HOST}"
+VITE_REVERB_PORT="${REVERB_PORT}"
+VITE_REVERB_SCHEME="${REVERB_SCHEME}"
