--- a/composer.json
+++ b/composer.json
@@ -25,15 +25,15 @@
     "tightenco/ziggy": "^2.4"
   },
   "require-dev": {
-    "roave/security-advisories": "dev-latest",
     "fakerphp/faker": "^1.23",
     "larastan/larastan": "^3.0",
     "laravel/pail": "^1.1",
     "laravel/pint": "^1.13",
-    "laravel/sail": "^1.26",
+    "laravel/sail": "^1.43",
     "mockery/mockery": "^1.6",
     "nunomaduro/collision": "^8.1",
-    "phpunit/phpunit": "^11.0.1"
+    "phpunit/phpunit": "^11.0.1",
+    "roave/security-advisories": "dev-latest"
   },
   "autoload": {
     "psr-4": {
