--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
   "require-dev": {
     "fakerphp/faker": "^1.23",
     "larastan/larastan": "^3.0",
+    "laravel/dusk": "^8.3",
     "laravel/pail": "^1.1",
     "laravel/pint": "^1.13",
     "laravel/sail": "^1.43",
