--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=pr0konverter
+DB_DATABASE=pr0verter
 DB_USERNAME=root
 DB_PASSWORD=
 
