--- a/.github/workflows/dusk.yml
+++ b/.github/workflows/dusk.yml
@@ -30,11 +30,14 @@ jobs:
       QUEUE_CONNECTION: redis
     steps:
       - uses: actions/checkout@v4
-      - name: Install yt-dlp and ffmpeg
+      - name: Install ffmpeg
         run: |
-          if ! command -v yt-dlp &> /dev/null || ! command -v ffmpeg &> /dev/null; then
-            sudo apt-get update
-            sudo apt-get install -y yt-dlp ffmpeg
+          sudo apt-get update
+          if ! command -v ffmpeg &> /dev/null; then
+              echo "ffmpeg nicht gefunden, wird installiert..."
+              sudo apt-get install -y ffmpeg
+          else
+              echo "ffmpeg ist bereits installiert."
           fi
       - name: Prepare The Environment
         run: cp .env.example .env
@@ -42,7 +45,14 @@ jobs:
         run: |
           sudo systemctl start mysql
           mysql --user="root" --password="root" -e "CREATE DATABASE \`pr0verter\` character set UTF8mb4 collate utf8mb4_bin;"
+      - name: Cache Vendor
+        id: cache-vendor
+        uses: actions/cache@v4
+        with:
+          path: vendor
+          key: ${{ runner.os }}-vendor-${{ hashFiles('**/composer.lock') }}
       - name: Install Composer Dependencies
+        if: steps.cache-vendor.outputs.cache-hit != 'true'
         run: composer install --no-progress --prefer-dist --optimize-autoloader
       - name: Generate Application Key
         run: php artisan key:generate
@@ -56,8 +66,17 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 21
-      - name: Build Assets
-        run: npm install && npm run build
+      - name: Cache Node Modules
+        id: cache-node-modules
+        uses: actions/cache@v4
+        with:
+          path: vendor
+          key: ${{ runner.os }}-vendor-${{ hashFiles('**/package-lock.json') }}
+      - name: Install Node Modules
+        if: steps.cache-node-modules.outputs.cache-hit != 'true'
+        run: npm install
+      - name : Build Assets
+        run: npm run build
       - name: Migrate Database & Seed
         run: php artisan migrate:fresh --seed --force
       - name: Run Laravel Server
