--- a/.github/workflows/lint-js-code.yml
+++ b/.github/workflows/lint-js-code.yml
@@ -36,7 +36,14 @@ jobs:
         with:
           node-version: 21
 
-      - name: Install Dependencies
+      - name: Cache Node Modules
+        id: cache-node-modules
+        uses: actions/cache@v4
+        with:
+          path: vendor
+          key: ${{ runner.os }}-vendor-${{ hashFiles('**/package-lock.json') }}
+      - name: Install Node Modules
+        if: steps.cache-node-modules.outputs.cache-hit != 'true'
         run: npm install
 
       - name: ESLint
