--- a/.github/workflows/code-styling.yml
+++ b/.github/workflows/code-styling.yml
@@ -25,20 +25,11 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 21
-
-      - name: Cache Node Modules
-        id: cache-node-modules
-        uses: actions/cache@v4
-        with:
-          path: vendor
-          key: ${{ runner.os }}-vendor-${{ hashFiles('**/package-lock.json') }}
-      - name: Install Node Modules
-        if: steps.cache-node-modules.outputs.cache-hit != 'true'
-        run: npm install
+          cache: 'npm'
+          cache-dependency-path: subdir/package-lock.json
 
       - name: Run Prettier
         run: npm run prettier
