--- a/.github/workflows/dusk.yml
+++ b/.github/workflows/dusk.yml
@@ -30,14 +30,11 @@ jobs:
       QUEUE_CONNECTION: redis
     steps:
       - uses: actions/checkout@v4
-      - name: Install ffmpeg
+      - name: Install yt-dlp and ffmpeg
         run: |
-          sudo apt-get update
-          if ! command -v ffmpeg &> /dev/null; then
-              echo "ffmpeg nicht gefunden, wird installiert..."
-              sudo apt-get install -y ffmpeg
-          else
-              echo "ffmpeg ist bereits installiert."
+          if ! command -v yt-dlp &> /dev/null || ! command -v ffmpeg &> /dev/null; then
+            sudo apt-get update
+            sudo apt-get install -y yt-dlp ffmpeg
           fi
       - name: Prepare The Environment
         run: cp .env.example .env
@@ -62,21 +59,12 @@ jobs:
         run: php artisan dusk:chrome-driver --detect
       - name: Start Chrome Driver
         run: ./vendor/laravel/dusk/bin/chromedriver-linux --port=9515 &
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 21
-      - name: Cache Node Modules
-        id: cache-node-modules
-        uses: actions/cache@v4
-        with:
-          path: vendor
-          key: ${{ runner.os }}-vendor-${{ hashFiles('**/package-lock.json') }}
-      - name: Install Node Modules
-        if: steps.cache-node-modules.outputs.cache-hit != 'true'
-        run: npm install
-      - name : Build Assets
-        run: npm run build
+          cache: 'npm'
+          cache-dependency-path: subdir/package-lock.json
+      - run: npm run build
       - name: Migrate Database & Seed
         run: php artisan migrate:fresh --seed --force
       - name: Run Laravel Server
