--- a/.github/workflows/code-styling.yml
+++ b/.github/workflows/code-styling.yml
@@ -27,7 +27,7 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: "21.7.3"
+          node-version: "latest"
           cache: 'npm'
           cache-dependency-path: subdir/package-lock.json
 
