--- a/.github/workflows/code-styling.yml
+++ b/.github/workflows/code-styling.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           node-version: "latest"
           cache: 'npm'
-          cache-dependency-path: subdir/package-lock.json
+          cache-dependency-path: "**/package-lock.json"
 
       - name: Run Prettier
         run: npm run prettier
