--- a/.github/workflows/lint-js-code.yml
+++ b/.github/workflows/lint-js-code.yml
@@ -37,5 +37,8 @@ jobs:
           cache: 'npm'
           cache-dependency-path: "**/package-lock.json"
 
+      - name: Install dependencies
+        run: npm ci
+
       - name: ESLint
         run: npm run lint
