--- a/.github/workflows/code-styling.yml
+++ b/.github/workflows/code-styling.yml
@@ -31,6 +31,9 @@ jobs:
           cache: 'npm'
           cache-dependency-path: "**/package-lock.json"
 
+      - name: Install dependencies
+        run: npm ci
+
       - name: Run Prettier
         run: npm run prettier
 
