--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-    laravel.test:
+    pr0verter.test:
         build:
             context: './docker/8.2'
             dockerfile: Dockerfile
