--- a/package.json
+++ b/package.json
@@ -1,51 +1,52 @@
 {
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "vite build",
-    "dev": "vite",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix resources",
-    "prettier": "prettier ./resources  --write"
-  },
-  "devDependencies": {
-    "@tailwindcss/forms": "^0.5.9",
-    "autoprefixer": "^10.4.20",
-    "axios": "^1.7.4",
-    "chokidar": "^4.0.3",
-    "concurrently": "^9.0.1",
-    "eslint": "^9.30.1",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
-    "eslint-plugin-vue": "^9.21.1",
-    "laravel-echo": "^1.19.0",
-    "laravel-vite-plugin": "^1.0",
-    "postcss": "^8.4.47",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "pusher-js": "^8.4.0",
-    "tailwindcss": "^3.4.13",
-    "vite": "^6.0"
-  },
-  "dependencies": {
-    "@heroicons/vue": "^2.2.0",
-    "@inertiajs/vue3": "^2.0.0",
-    "@tailwindcss/typography": "^0.5.15",
-    "@vee-validate/zod": "^4.14.7",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "@vueuse/core": "^13.2.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-vue-next": "^0.468.0",
-    "radix-vue": "^1.9.11",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7",
-    "vee-validate": "^4.14.7",
-    "vue": "^3.5.13",
-    "vue-sonner": "^1.3.0",
-    "ziggy-js": "^2.4.1",
-    "zod": "^3.24.1"
-  },
-  "optionalDependencies": {
-    "@rollup/rollup-linux-x64-musl": "4.46.2"
-  }
+    "private": true,
+    "type": "module",
+    "name": "pr0verter",
+    "scripts": {
+        "build": "vite build",
+        "dev": "vite",
+        "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix resources",
+        "prettier": "prettier ./resources  --write"
+    },
+    "devDependencies": {
+        "@tailwindcss/forms": "^0.5.9",
+        "autoprefixer": "^10.4.20",
+        "axios": "^1.7.4",
+        "chokidar": "^4.0.3",
+        "concurrently": "^9.0.1",
+        "eslint": "^9.30.1",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-prettier": "^5.5.4",
+        "eslint-plugin-vue": "^9.21.1",
+        "laravel-echo": "^1.19.0",
+        "laravel-vite-plugin": "^1.0",
+        "postcss": "^8.4.47",
+        "prettier": "^3.2.5",
+        "prettier-plugin-tailwindcss": "^0.5.11",
+        "pusher-js": "^8.4.0",
+        "tailwindcss": "^3.4.13",
+        "vite": "^6.0"
+    },
+    "dependencies": {
+        "@heroicons/vue": "^2.2.0",
+        "@inertiajs/vue3": "^2.0.0",
+        "@tailwindcss/typography": "^0.5.15",
+        "@vee-validate/zod": "^4.14.7",
+        "@vitejs/plugin-vue": "^5.2.1",
+        "@vueuse/core": "^13.2.0",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-vue-next": "^0.468.0",
+        "radix-vue": "^1.9.11",
+        "tailwind-merge": "^3.3.1",
+        "tailwindcss-animate": "^1.0.7",
+        "vee-validate": "^4.14.7",
+        "vue": "^3.5.13",
+        "vue-sonner": "^1.3.0",
+        "ziggy-js": "^2.4.1",
+        "zod": "^3.24.1"
+    },
+    "optionalDependencies": {
+        "@rollup/rollup-linux-x64-musl": "4.46.2"
+    }
 }
