--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.10",
-        "autoprefixer": "^10.4.21",
+        "@tailwindcss/postcss": "^4.1.12",
         "axios": "^1.11.0",
         "chokidar": "^4.0.3",
         "concurrently": "^9.2.1",
@@ -24,7 +24,7 @@
         "prettier": "^3.6.2",
         "prettier-plugin-tailwindcss": "^0.6.14",
         "pusher-js": "^8.4.0",
-        "tailwindcss": "^3.4.13",
+        "tailwindcss": "^4.1.12",
         "vite": "^7.1.3"
     },
     "dependencies": {
