--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "scripts": {
         "build": "vite build",
         "dev": "vite",
-        "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix resources",
+        "lint": "eslint --ext .js,.vue --fix resources",
         "prettier": "prettier ./resources  --write"
     },
     "devDependencies": {
+        "@eslint/eslintrc": "^3.3.1",
+        "@eslint/js": "^9.34.0",
         "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/postcss": "^4.1.12",
         "axios": "^1.11.0",
