--- a/package.json
+++ b/package.json
@@ -47,5 +47,9 @@
         "vue-sonner": "^2.0.8",
         "ziggy-js": "^2.5.3",
         "zod": "^3.24.1"
+    },
+    "optionalDependencies": {
+        "@rollup/rollup-linux-x64-musl": "4.49.0",
+        "@rollup/rollup-linux-x64-gnu": "4.49.0"
     }
 }
