--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-vue-next": "^0.542.0",
+        "puppeteer": "^24.17.1",
         "radix-vue": "^1.9.17",
         "tailwind-merge": "^3.3.1",
         "tailwindcss-animate": "^1.0.7",
@@ -49,7 +50,7 @@
         "zod": "^3.24.1"
     },
     "optionalDependencies": {
-        "@rollup/rollup-linux-x64-musl": "4.49.0",
-        "@rollup/rollup-linux-x64-gnu": "4.49.0"
+        "@rollup/rollup-linux-x64-gnu": "4.49.0",
+        "@rollup/rollup-linux-x64-musl": "4.49.0"
     }
 }
