--- a/.github/workflows/dusk.yml
+++ b/.github/workflows/dusk.yml
@@ -48,9 +48,11 @@ jobs:
         with:
           path: vendor
           key: ${{ runner.os }}-vendor-${{ hashFiles('**/composer.lock') }}
-      - name: Install Composer Dependencies
-        if: steps.cache-vendor.outputs.cache-hit != 'true'
-        run: composer install --no-progress --prefer-dist --optimize-autoloader
+      - uses: php-actions/composer@v6
+        with:
+          php_extensions: intl zip sodium pcntl bcmath
+          php_version: '8.2'
+          args: --ignore-platform-reqs --optimize-autoloader --no-progress --prefer-dist --optimize-autoloader
       - name: Generate Application Key
         run: php artisan key:generate
       - name: Link Storage
