--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   ],
   "license": "MIT",
   "require": {
-    "php": "^8.2",
+    "php": "^8.4",
     "ext-bcmath": "*",
     "ext-intl": "*",
     "ext-pcntl": "*",
@@ -31,13 +31,14 @@
   "require-dev": {
     "fakerphp/faker": "^1.23",
     "larastan/larastan": "^3.0",
-    "laravel/dusk": "^8.3",
     "laravel/pail": "^1.1",
     "laravel/pint": "^1.13",
     "laravel/sail": "^1.43",
     "mockery/mockery": "^1.6",
     "nunomaduro/collision": "^8.1",
-    "phpunit/phpunit": "^11.0.1",
+    "pestphp/pest": "^4.2",
+    "pestphp/pest-plugin-browser": "^4.0",
+    "pestphp/pest-plugin-laravel": "^4.0",
     "roave/security-advisories": "dev-latest",
     "spatie/laravel-horizon-watcher": "^1.1"
   },
