--- a/package.json
+++ b/package.json
@@ -1,56 +1,57 @@
 {
-    "private": true,
-    "type": "module",
-    "name": "pr0verter",
-    "scripts": {
-        "build": "vite build",
-        "dev": "vite",
-        "lint": "eslint --ext .js,.vue --fix resources",
-        "prettier": "prettier ./resources  --write"
-    },
-    "devDependencies": {
-        "@eslint/eslintrc": "^3.3.3",
-        "@eslint/js": "^9.39.1",
-        "@tailwindcss/forms": "^0.5.10",
-        "@tailwindcss/postcss": "^4.1.12",
-        "axios": "^1.11.0",
-        "chokidar": "^4.0.3",
-        "concurrently": "^9.2.1",
-        "eslint": "^9.34.0",
-        "eslint-config-prettier": "^10.1.8",
-        "eslint-plugin-prettier": "^5.5.4",
-        "eslint-plugin-vue": "^10.6.2",
-        "laravel-echo": "^2.2.0",
-        "laravel-vite-plugin": "^2.0",
-        "postcss": "^8.5.6",
-        "prettier": "^3.7.4",
-        "prettier-plugin-tailwindcss": "^0.7.1",
-        "pusher-js": "^8.4.0",
-        "tailwindcss": "^4.1.17",
-        "vite": "^7.1.9"
-    },
-    "dependencies": {
-        "@heroicons/vue": "^2.2.0",
-        "@inertiajs/vue3": "^2.2.7",
-        "@tailwindcss/typography": "^0.5.16",
-        "@vee-validate/zod": "^4.14.7",
-        "@vitejs/plugin-vue": "^6.0.1",
-        "@vueuse/core": "^13.9.0",
-        "class-variance-authority": "^0.7.1",
-        "clsx": "^2.1.1",
-        "lucide-vue-next": "^0.555.0",
-        "puppeteer": "^24.17.1",
-        "radix-vue": "^1.9.17",
-        "tailwind-merge": "^3.4.0",
-        "tailwindcss-animate": "^1.0.7",
-        "vee-validate": "^4.15.1",
-        "vue": "^3.5.25",
-        "vue-sonner": "^2.0.8",
-        "ziggy-js": "^2.6.0",
-        "zod": "^3.24.1"
-    },
-    "optionalDependencies": {
-        "@rollup/rollup-linux-x64-gnu": "4.53.3",
-        "@rollup/rollup-linux-x64-musl": "4.52.5"
-    }
+  "private": true,
+  "type": "module",
+  "name": "pr0verter",
+  "scripts": {
+    "build": "vite build",
+    "dev": "vite",
+    "lint": "eslint --ext .js,.vue --fix resources",
+    "prettier": "prettier ./resources  --write"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^9.39.1",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/postcss": "^4.1.12",
+    "axios": "^1.11.0",
+    "chokidar": "^4.0.3",
+    "concurrently": "^9.2.1",
+    "eslint": "^9.34.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-vue": "^10.6.2",
+    "laravel-echo": "^2.2.0",
+    "laravel-vite-plugin": "^2.0",
+    "postcss": "^8.5.6",
+    "prettier": "^3.7.4",
+    "prettier-plugin-tailwindcss": "^0.7.1",
+    "pusher-js": "^8.4.0",
+    "tailwindcss": "^4.1.17",
+    "vite": "^7.1.9"
+  },
+  "dependencies": {
+    "@heroicons/vue": "^2.2.0",
+    "@inertiajs/vue3": "^2.2.7",
+    "@tailwindcss/typography": "^0.5.16",
+    "@vee-validate/zod": "^4.14.7",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vueuse/core": "^13.9.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.555.0",
+    "playwright": "^1.57.0",
+    "puppeteer": "^24.17.1",
+    "radix-vue": "^1.9.17",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "vee-validate": "^4.15.1",
+    "vue": "^3.5.25",
+    "vue-sonner": "^2.0.8",
+    "ziggy-js": "^2.6.0",
+    "zod": "^3.24.1"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.53.3",
+    "@rollup/rollup-linux-x64-musl": "4.52.5"
+  }
 }
